# e2e-encrypted-messenger-signal

./: .gitignore  README.md
mvp/: Cargo.toml
mvp/client/: Cargo.toml
mvp/client/src/: group_demo.rs  main.rs
mvp/crypto/: Cargo.toml
mvp/crypto/src/: disappearing.rs  group.rs  lib.rs  multi_device.rs  ratchet.rs  safety_numbers.rs  sealed_sender.rs  sender_keys.rs  signed_prekey.rs  wire.rs  x3dh.rs
mvp/crypto/src/mls/: group.rs  keypackage.rs  messages.rs  mod.rs  treekem.rs
mvp/demo/: Cargo.toml
mvp/demo/src/: main.rs
mvp/relay/: Cargo.toml
mvp/relay/src/: lib.rs  main.rs  queue.rs  rate_limit.rs
