[workspace]
resolver = "2"
members = ["crypto", "demo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Foysal <ahfoysal30@gmail.com>"]
license = "MIT"

[workspace.dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
zeroize = "1"
thiserror = "1"
