[workspace]
resolver = "2"
members = ["crypto", "demo", "relay", "client"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Foysal <ahfoysal30@gmail.com>"]
license = "MIT"

[workspace.dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
zeroize = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
anyhow = "1"
# M5 additions
sled = "0.34"
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2"
tokio-socks = "0.5"
url = "2"
