[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "group_demo"
path = "src/group_demo.rs"

[dependencies]
crypto = { path = "../crypto" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
