[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
