[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = "0.5"
base64 = { workspace = true }
anyhow = { workspace = true }
